<resources>
    <string name="app_name">Wave</string>

    <!-- Action Bar Pull To Refresh -->
    <string name="action_pull_text">Pull to refresh...</string>
    <string name="action_refreshing_text">Loading...</string>

    <!-- Menu -->
    <string name="action_scan">Scan</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Navigation Drawer -->
    <string name="section_my_tags">My Tags</string>
    <string name="section_modules">Modules</string>
    <string name="section_contacts">Contacts</string>
    <string name="section_events">Events</string>
    <string name="section_library">Library</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Profile -->
    <string name="profile_home_welcome">Welcome</string>
    <string name="profile_home_balance">Print Budget</string>

    <!-- Events -->
    <string-array name="action_events">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>

    <!-- Preferences -->
    <string name="preferences_account">Account</string>
    <string name="preferences_email">Email</string>
    <string name="preferences_email_value">d.mazurkiewicz@lancaster.ac.uk</string>
    <string name="preferences_logout">Logout</string>

    <string name="preferences_about">About</string>
    <string name="preferences_author">Author</string>
    <string name="preferences_author_value">Damian Mazurkiewicz</string>
    <string name="preferences_university">University</string>
    <string name="preferences_university_value">Lancaster University</string>
    <string name="preferences_version">Version</string>
    <string name="preferences_version_value">1.0</string>

    <string name="preferences_alert_title">Are you sure?</string>
    <string name="preferences_alert_message">Are you sure you want to logout from this device?</string>
    <string name="preferences_alert_positive">Logout</string>
    <string name="preferences_alert_negative">Cancel</string>
</resources>
